# aoc-2020

./: .editorconfig  .gitignore  aoc.install  package.json
c/: .clang-format  .gitignore  .local_vimrc.vim  alloc_printf.c  alloc_printf.h  aoc2020.c  argparse.c  argparse.h  day01.c  day01.h  day02.c  day02.h  day03.c  day03.h  dyarray.h  meson.build  simple_flags.c  simple_flags.h  slurp.c  slurp.h  strdup_std.c  strdup_std.h  strtok_reentrant.c  strtok_reentrant.h
c/subprojects/: hedley.wrap
cs/: .local_vimrc.vim  Program.cs  aoc2020.csproj
cs/Day01/: Day01.cs
d01-rs/: .local_vimrc.vim  Cargo.toml
d01-rs/src/: main.rs
d02-hs/: .gitignore  Main.hs  Makefile
d03-java/: Main.java
day01/: day01.ml  dune
haskell/: LICENSE  aoc.cabal  floskell.json
ocaml/: .gitignore  aoc.ml  dune  package.json
ocaml/esy.lock/: index.json
ocaml/esy.lock/opam/topkg.1.0.5/: opam
ocaml/esy.lock/opam/uucp.14.0.0/: opam
ocaml/esy.lock/opam/uuseg.14.0.0/: opam
ocaml/esy.lock/opam/uutf.1.0.3/: opam
ocaml/helpers/: file.ml  file.mli
