name:                   aoc
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/Phytolizer/aoc-2020#readme
license:                MIT
license-file:           LICENSE
author:                 Kyle Coffey
maintainer:             me@phytolizer.dev
copyright:              (c) 2022 Kyle Coffey
-- category:
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable aoc
    hs-source-dirs:     src
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      base >= 4.7 && < 5

